# ter_av_evasion_22-23

./: .gitignore  CMakeLists.txt  README.md  staged.cpp  unstaged.cpp
shellcodes/unobfuscated_calc/: shellcode.hpp
shellcodes/unobfuscated_unstaged_meterpreter_reverse_shell/: shellcode.hpp
shellcodes/xored_unstaged_meterpreter_reverse_shell/: shellcode.hpp
src/all_techniques_combined/: README.md  functions.hpp  main.cpp  shellcode_dropper.cpp
src/no_obfuscation/: CMakeLists.txt  README.md  main.cpp  shellcode_dropper.cpp  staged.cpp  staged_shellcode.hpp  unstaged.cpp
src/shellcodes/: README.md  natural_language_calc.hpp  natural_language_staged_meterpreter_reverse_shell.hpp  natural_language_staged_reverse_shell.hpp  test.hpp  unobfuscated_calc.hpp  unobfuscated_staged_meterpreter_reverse_shell.hpp  xored_calc.hpp  xored_low_entropy_calc.hpp  xored_low_entropy_staged_meterpreter.hpp  xored_low_entropy_unstaged_meterpreter.hpp  xored_staged_meterpreter_reverse_shell.hpp  xored_unstaged_meterpreter_reverse_shell.hpp
src/technique_1_encrypting_shellcode/: CMakeLists.txt  main.cpp  shellcode_dropper.cpp  shellcode_encrypter.py  staged.cpp  unstaged.cpp  unstaged_shellcode.hpp  xored_staged_shellcode.hpp  xored_unstaged_shellcode.hpp
src/technique_2_reducing_entropy/: README.md  shellcode_dropper.cpp  shellcode_encryption.py  shellcode_encryption_bis.py
src/technique_2bis_reducing_entropy/: README.md  main.cpp  shellcode_dropper.cpp  shellcode_encrypter.py
src/technique_3_sandbox_escape/: README.md  main.cpp  shellcode_dropper.cpp
src/technique_4_clear_import_address_table/: README.md  function_name_obfuscator.py  functions.hpp  shellcode_dropper.cpp
src/technique_5_bypassing_etw/: README.md  function_name_obfuscator.py  functions.hpp  shellcode_dropper.cpp
